# miniproject

./: .gitignore  README.md
.superpowers/sdd/: task-2-report.md  task-3-report.md  task-5-report.md
_workspace/: 03_python_provider_handoff.md  05_web_contract_handoff.md
docs/superpowers/plans/: 2026-07-20-emotion-interview.md  2026-07-20-moodwave.md  2026-07-21-recommendation-intent-ranking.md
docs/superpowers/specs/: 2026-07-20-emotion-interview-design.md  2026-07-20-moodwave-design.md
mcp-server/: .env.example  fastmcp.json  pyproject.toml  server.py
mcp-server/moodwave_mcp/: __init__.py  config.py  database.py  models.py  postgres_database.py  server.py
mcp-server/moodwave_mcp/providers/: __init__.py  base.py  cover_art.py  itunes.py  lastfm.py  musicbrainz.py
mcp-server/moodwave_mcp/services/: __init__.py  cache.py  constraints.py  discovery.py  normalization.py  recommendation.py  scoring.py  verification.py  youtube_link.py
mcp-server/tests/: test_config.py  test_database.py  test_discovery_intent.py  test_domestic_constraints.py  test_itunes.py  test_models.py  test_providers.py  test_recommendation.py  test_scoring.py
web/: .env.local.example  package-lock.json  package.json  vitest.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/components/: EmotionInterview.tsx
web/lib/agent/: error.ts  (+6 more)
web/tests/: activity-log.test.ts  agent-loop.test.ts  agent-route.test.ts  candidate-selection.test.ts  emotion-flow.test.ts  final-narrative.test.ts  mcp-client.test.ts  playlist-routes.test.ts  recommendation-intent.test.ts  schemas.test.ts
(+7 files in other folders)
