[project]
name = "moodwave-mcp"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = ["fastmcp>=3.4,<4", "httpx>=0.28", "psycopg[binary]>=3.2", "pydantic>=2.0"]

[project.scripts]
moodwave-mcp = "moodwave_mcp.server:main"

[project.optional-dependencies]
test = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"
